# core

./: .gitignore  .travis.yml  CMakeLists.txt  CodeStyleConventions.md  INTEL-PROTO.md  PLANNING  PLANNING.md  README  README.md  TODO  TODO.md  core.cpp  core.h  intel-proto.md
base/: ball.h  core.h  gamestate.h  refereestate.h  robot.h  skill.h  team.h  world.h
clients/: CMakeLists.txt  simple.cpp
cmake/: Utils.cmake
interface/: subprocess.cpp  subprocess.h  udp.h
misc/: net.c  net.h  subproc.c  subproc.h  subproc.rs  subproc_demo_echo.sh
proto/: grSim_Packet.proto
src/: CMakeLists.txt  ball.h  core.cpp  core.h  gamestate.h  intel.cpp  intel.h  refereestate.h  robot.h  skill.h  team.h  teaminfo.h  world.h
src/base/: core.cpp  core.h  gamestate.h  intel.cpp
src/control/: control.h
src/interface/: CMakeLists.txt  subprocess.cpp  subprocess.h  udp.cpp  udp.h  vision.h
src/utils/: CMakeLists.txt  derivator.cpp  derivator.h  vector2.cpp  vector2.h  vector3.h
tests/: CMakeLists.txt  core.cpp  intel.cpp  subprocess-child.cpp  subprocess-repeater.cpp  subprocess.cpp
tests/interface/: CMakeLists.txt  subprocess.cpp
utils/: CMakeLists.txt  net.c  net.cpp  udp.cpp  udp.h  vector3.h
vision/: vision.h
